# cpp-sdk

./: .bazelrc  .clang-tidy  .gitignore  .release-please-manifest.json  BUILD  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Gemfile  MODULE.bazel  README.md  WORKSPACE  release-please-config.json
.github/workflows/: ci-format-test-lint.yml  clang-format-and-lint.yml  lint-pr.yml  release-please.yml
include/: BUILD
include/openfeature/: client.h  error_code.h  evaluation_context.h  feature_provider_status_manager.h  features.h  flag_metadata.h  metadata.h  noop_provider.h  openfeature.h  provider.h  provider_evaluation.h  provider_status.h  reason.h  resolution_details.h  state_handler.h
openfeature/: BUILD  base_hook.h  client_api.cpp  client_api.h  evaluation_context.cpp  evaluation_context.h  evaluation_options.h  feature_provider_status_manager.cpp  feature_provider_status_manager.h  features.h  flag_evaluation_details.cpp  flag_evaluation_details.h  flag_type_value.h  global_context_manager.cpp  global_context_manager.h  hook.cpp  hook.h  hook_context.cpp  hook_context.h  hook_data.cpp  hook_data.h  hook_hints.h  metadata.h  noop_provider.cpp  noop_provider.h  openfeature.h  openfeature_api.cpp  openfeature_api.h  provider.h  provider_repository.cpp  provider_repository.h  reason.h  resolution_details.cpp  resolution_details.h  value.cpp  value.h
openfeature/memory_provider/: BUILD  flag.h  in_memory_provider.cpp  in_memory_provider.h
src/: BUILD  feature_provider_status_manager.cpp  noop_provider.cpp  resolution_details.cpp  test.cpp
src/test/: BUILD  resolution_details_test.cpp
test/: BUILD  client_api_test.cpp  evaluation_context_test.cpp  evaluation_options_test.cpp  feature_provider_status_manager_test.cpp  flag_evaluation_details_test.cpp  global_context_manager_test.cpp  hook_context_test.cpp  hook_data_test.cpp  hook_test.cpp  noop_provider_test.cpp  openfeature_api_test.cpp  provider_repository_test.cpp  resolution_details_test.cpp  value_test.cpp
test/e2e/: BUILD  context_storing_provider.cpp  context_storing_provider.h  cwt_cucumber.BUILD  cwt_extension.bzl  flag.h  flag_test.h  state.h
test/e2e/steps/: BUILD  minimal_steps.cpp
test/memory_provider/: BUILD  flag_test.cpp  in_memory_provider_test.cpp
test/mocks/: mock_feature_provider.h
