module(name = "openfeature_cpp_sdk")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20250814.2")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "cucumber-cpp", version = "0.8.0.bcr.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Not official but well established fork with a fix to header only libraries
    # https://github.com/hedronvision/bazel-compile-commands-extractor/pull/219
    commit = "02d15621b528efd877f5d5657c4b738523a0eb17",
)
